<resources>
    <string name="app_name">alba</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_name">시흥알바 로그인</string>
    <string name="login_email">이메일 주소</string>
    <string name="login_password">비밀번호</string>
    <string name="login_shopjoin">사장님 회원가입</string>
    <string name="login_join">회원가입</string>
    <string name="login_shopbox">사장님 로그인</string>
    <string name="login_start">시작하기</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_show_detail">ShowDetail</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
