<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin = "30dp"

    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight ="20"
        android:gravity="center"


        >
        <TextView
            android:id="@+id/login_name"
            android:layout_width ="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_name"
            android:textSize = "30sp"
            android:textColor ="#000000"
            android:textStyle="bold"

            />

        <ImageView
            android:contentDescription="@null"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/login_logo" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_border"
            android:ems="10"
            android:hint="@string/login_email"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:text=""
            android:importantForAutofill="no"
            />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:paddingStart ="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_border"
            android:ems="10"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"
            android:importantForAutofill="no"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox_shop_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="7dp"
            android:text="@string/login_shopbox"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="top"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight ="2"
        >
        <Button
            android:layout_width="150dp"
            android:id="@+id/join_button"
            android:layout_height="50dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/login_join"
            android:textSize = "13sp"
            android:background="#00ff0000"

            />
        <TextView
            android:layout_width="2dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize = "13sp"
            android:background="#000000"

            />
        <Button
            android:id="@+id/shop_join_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/login_shopjoin"
            android:textSize = "13sp"
            android:background="#00ff0000"


            />
    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight ="2"

        >

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="#FFEDA4"
            android:backgroundTint="#FFEDA4"
            android:text="@string/login_start"
            android:textSize="15sp"
            />
    </LinearLayout>




</LinearLayout>
